--- a/newflasher.rc.in
+++ b/newflasher.rc.in
@@ -1,8 +1,8 @@
 id ICON "newflasher.ico"
 
 1 VERSIONINFO
-FILEVERSION     18,0,0,0
-PRODUCTVERSION  18,0,0,0
+FILEVERSION     @VERSION@,0,0,0
+PRODUCTVERSION  @VERSION@,0,0,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
@@ -10,12 +10,12 @@ BEGIN
     BEGIN
       VALUE "CompanyName", "By munjeni @ 2017/2019"
       VALUE "FileDescription", "Xperia Command Line Flasher"
-      VALUE "FileVersion", "18"
+      VALUE "FileVersion", "@VERSION@"
       VALUE "InternalName", "newflasher"
       VALUE "LegalCopyright", "munjeni @ 2017"
       VALUE "OriginalFilename", "newflasher.exe"
       VALUE "ProductName", "newflasher"
-      VALUE "ProductVersion", "18"
+      VALUE "ProductVersion", "@VERSION@"
     END
   END
 
