set spec pkg_version from version.h

--- a/newflasher.spec.in
+++ b/newflasher.spec.in
@@ -13,7 +13,7 @@
 # published by the Open Source Initiative.
 
 
-%define pkg_version 55
+%define pkg_version @VERSION@
 Name:           newflasher
 Version:        %{pkg_version}
 Release:        1
